2010-11-17  Michael Wiegand <michael.wiegand@greenbone.net>

	Addressed two 64 bit compiler warnings.

	* misc/openvas_server.c (openvas_server_send): Use %zu for size_t.

	* omp/xml.c (read_entity_and_string): Cast to match format string.

2010-11-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_func.c (qsortcmp): Added this typedef to allow proper cast.
	(insert_nasl_func): Apply cast to qsortcmp for strcmp used in qsort.

2010-11-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/bpf_share.c (bpf_open_live): Lowered limit of for-loop by 1
	because currently it would exceed the fixed field size.
	This is just from reading the code and because we got a compiler
	warning "array subscript is above array bounds". It is unclear
	how or whether there is any positive effect in practice at all.

2010-11-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Addressed compiler warnings regarding uninitialized variables and
	unused functions.

	* nasl/nasl_packet_forgery_v6.c (forge_icmp_v6_packet): Make sure
	routersolicit, routeradvert, neighborsolicit and neighboradvert are
	initialized before use.

	* hg/hg_add_hosts.c (hg_add_ipv6host_with_options): Addressed TODO,
	ensure c_hostname is initialized before use.

	* misc/openvas_logging.c (openvas_syslog_func): Removed superfluous
	function, logging to syslog is now handled by openvas_log_func.
	(openvas_log_func): Ensure log_domain_entry is initialized before use.

2010-11-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/CMakeLists.txt: Removed accidental change in last commit.

2010-11-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/system.c (inet_aton): Removed this function. This
	function appears to be available on any relevant OpenVAS
	platform and thus we do not need a fall-back anymore.

2010-11-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/CMakeLists.txt: Changed install directory for headers